kubernetes/apps/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
  labels:
    app.kubernetes.io/managed-by: kubectl
    chaos-target: "true"
